[gd_scene load_steps=4 format=3 uid="uid://fct6nco54e05"]

[ext_resource type="Script" path="res://Scripts/OpenChest.gd" id="1_v8rra"]
[ext_resource type="Texture2D" uid="uid://bt6bggjusyavl" path="res://Assets/BunnyHeadspace/New/Final Headspace Assets/chestinteriornoclockhand.png" id="2_bq1ul"]
[ext_resource type="Texture2D" uid="uid://2x04q2kp27hr" path="res://Assets/BunnyHeadspace/New/Final Headspace Assets/minutehand.png" id="3_sl74t"]

[node name="OpenChest" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v8rra")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2500.0
offset_bottom = 1406.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_bq1ul")

[node name="MinuteHand" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 533.0
offset_top = 536.0
offset_right = 1261.0
offset_bottom = 940.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_sl74t")

[connection signal="mouse_entered" from="MinuteHand" to="." method="_on_minute_hand_mouse_entered"]
[connection signal="mouse_exited" from="MinuteHand" to="." method="_on_minute_hand_mouse_exited"]
